Prevent select from overflowing container

--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -44,6 +44,7 @@ textarea {
 select {
 	color: initial;
 	font-family: $base-font;
+	max-width: 100%;
 }
 
 h1,
